cmake_minimum_required(VERSION 3.2)

project(ip_filter VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})

#add_definitions(-DAPP_VERSION_MAJOR="${PROJECT_VERSION_MAJOR}")
#add_definitions(-DAPP_VERSION_MINOR="${PROJECT_VERSION_MINOR}")
#add_definitions(-DAPP_VERSION_PATCH="${PROJECT_VERSION_PATCH}")
#add_definitions(-DAPP_VERSION_TWEAK="${PROJECT_VERSION_TWEAK}")

add_executable(ip_filter ip_filter.cpp)

set_target_properties(ip_filter PROPERTIES
        CXX_STANDARD 14
        CXX_STANDARD_REQUIRED ON
        COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra"
        )

install(TARGETS ip_filter RUNTIME DESTINATION bin)

set(CPACK_GENERATOR DEB)
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
set(CPACK_PACKAGE_CONTACT vks.skv@yandex.ru)
set(CPACK_PACKAGE_NAME ip_filter)
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_VERSION_TWEAK "${PROJECT_VERSION_TWEAK}")

include(CPack)
